"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

common/{client.h, init.c}, gtk/{config.c, gx11.c}: Add configuration option
to allow clients to timestamp incoming coloured messages. This implements RFE
#1090049
Brendan Lally 2005-09-22

gtk-v2/src/image.c copy part of gtk1 image.c to fix a compile issue on
mac.
Brendan Lally 2005-09-21

common/external.h: add definition of addsmooth.
gtl/inventory.c: explicit cast of parameters.
Ryo 2005-09-10

configure, configure.in: Move check for X11 early in the process so that
  gtk dependencies on them should be resolved.
MSW 2005-09-05

x11/x11.c: Fix similar problem for x11 client: need_update needs to be cleared
    too.
Andreas Kirschbaum 2005-09-04

gtk/map.c: need_resmooth needs to be cleared too, else drawing routines called
 all the time.
common/misc.c: LOG buffer made static to avoid stack creation/destruction.
common/script.c: removed unused variable/call.
gtk/gx11.c: no need to refresh game area when window gets focus.
gtk/gx11.h: add cache fields for listinfo.
gtk/inventory.c: don't refresh list labels if not changed.
common/mapdata.c: remove parasite #define NDEBUG
gtk/image.c: if icon and map scales are the same, just gdk_pixmap_ref image and mask.
 This saves graphical resources and time.
gtk/map.c: don't draw black rectangle if no face with transparency.
Ryo 2005-09-04

*Makefile.in, aclocal.m4, configure: Rebuilt.
Andreas Kirschbaum 2005-09-03

Fix bug #1102991 (Duplicate grapical display of the same monster):
common/Makefile.am: Add new files mapdata.c and mapdata.h.
common/{client.c, commands.c}: Tell mapdata module the current display size.
common/commands.c: Remove functions to handle map updates. Rewrite
   map1_common() to pass information into mapdata module.
common/init.c, gtk/gx11.c: Add new config options -mapscroll and -nomapscroll
   to enable/disable scrolling the map view with bitmap operations.